deploy/dev/booking-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-api
  namespace: dev
  labels:
    app: booking-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: booking-api
  template:
    metadata:
      labels:
        app: booking-api
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - booking-api
              topologyKey: "kubernetes.io/hostname"
      containers:
      - name: booking-api
        image: fcavarzare/projeto-reserva:booking-api-4bfc2295c3a87031712f5e0df4df9ef916a91de5
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: "200m"
            memory: "512Mi"
          requests:
            cpu: "200m"
            memory: "512Mi"
        livenessProbe:
          httpGet:
            path: /health/live
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /health/ready
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: booking-api-service
  namespace: dev
spec:
  selector:
    app: booking-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
